--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
   "dependencies": {
     "bootstrap": "4.3.1",
     "immer": "2.1.3",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
     "prop-types": "15.7.2",
     "react": "16.8.4",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "16.8.4",
     "react-redux": "6.0.1",
     "react-router-dom": "5.0.0",
     "react-toastify": "4.5.2",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
