--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "formik": "^1.5.8",
+    "json-server": "^0.15.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
@@ -16,13 +17,16 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-immutable-state-invariant": "^2.1.0",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prestart:api": "node tools/createMockDb.js",
+    "start:api": "node tools/apiServer.js"
   },
   "eslintConfig": {
     "extends": "react-app"
