--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-router-native": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
