added add char func

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "formik": "^1.5.8",
     "json-server": "^0.15.0",
     "node-sass": "^4.12.0",
