--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "formik": "^1.5.8",
@@ -12,9 +13,10 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.7.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.2",
     "react-router-native": "^5.0.1",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
